css: Cleanup login.less and fix layout issues
fixes #4419

--- a/public/css/icinga/login.less
+++ b/public/css/icinga/login.less
@@ -16,14 +16,6 @@
   background-size: 100% 100%;
   background-size: cover;
 
-  .login-wrapper {
-    height: 100%;
-    padding: 0 1em;
-    margin: 0 auto;
-    z-index: 2;
-    position: relative
-  }
-
   .login-form {
     width: 24em;
     position: relative;
@@ -44,11 +36,6 @@
     }
   }
 
-  .control-label {
-    font-size: 1em;
-    line-height: @line-height;
-  }
-
   .errors,
   .form-errors {
     list-style-type: none;
@@ -66,18 +53,10 @@
   }
 
   .form-errors,
-  input[type="text"],
-  input[type="password"] {
+  .control-group {
     &:not(:last-child) {
       margin-bottom: 1em;
     }
-  }
-
-  .control-label-group {
-    display: block;
-    padding: 0;
-    text-align: left;
-    width: 100%;
   }
 
   input[type=password],
@@ -98,10 +77,6 @@
   input[type="submit"]:focus {
     outline: 3px solid;
     .var(outline-color, icinga-blue-light);
-  }
-
-  .form-controls {
-    margin-top: 1.5em;
   }
 
   input[type=submit] {
@@ -131,17 +106,11 @@
     }
   }
 
-  .control-group:nth-child(3) {
-    text-align: left;
-    margin-top: 1.25em;
+  .remember-me-box {
+    display: flex;
+    align-items: flex-start;
 
-    > .control-label-group {
-      display: inline-block;
-      width: auto;
-    }
-
-    > .toggle-switch {
-      float: left;
+    .toggle-switch {
       margin-right: 1em;
     }
   }
